# calma

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .vercelignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DASHBOARD.md  Dockerfile  Makefile  PLAN.md  PRICING.md  README.md  REBUILD.md  REHEARSALS.md  SECURITY.md  api.vercel.json  install.sh  middleware.ts  next.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.codex/: hooks.json
.codex/hooks/: doc_sync_reminder.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: calma-comment-pr.yml  calma-deferred-gated.yml  calma-package.yml  calma-sca.yml  calma-test-all.yml  calma-tests.yml  calma-verify-pr.yml  ci.yml  codeql-actions.yml  publish-pypi.yml  warm-api.yml
api/: index.py  requirements.txt
app/: README.md  __init__.py  auth.py  globals.css  layout.tsx  opengraph-image.tsx  robots.ts  server.py  sitemap.ts
app/dashboard/: Nav.tsx  actions.ts  dashboard.module.css  layout.tsx  page.tsx
app/install/: page.tsx
app/lab/: page.tsx
app/recipes/: data.ts  page.tsx
app/registry/: page.tsx
app/tests/: test_webhook.py
benchmark/: README.md  coverage_report.py  determinism_check.py  external_track.py  gen_corpus.py  gen_framework_vectors.py  gen_validity_cases.py  judge_map.json  manifest.json  prep_judge.py  recompute_only.py  run_agent.py  run_calma.py  score.py  validate_oracles.py  validity_catalog.py
benchmark/judge_batches/: batch_0.json  batch_1.json  batch_10.json  batch_11.json  batch_2.json  batch_3.json  batch_4.json  batch_5.json  batch_6.json  batch_7.json  batch_8.json  batch_9.json
benchmark/reference_vectors/: vectors.json
benchmark/results/: calma.json  coverage.json  framework_vectors.json  judge_batch_0.json  judge_batch_1.json  judge_batch_10.json  judge_batch_11.json  judge_batch_2.json  judge_batch_3.json  judge_batch_4.json  judge_batch_5.json  judge_batch_6.json  judge_batch_7.json  judge_batch_8.json  judge_batch_9.json  (+4 more)
components/: About.tsx  Access.tsx  Announce.tsx  App.tsx  Atmos.tsx  Banner.tsx  Bench.tsx  Benchmarks.tsx  Benefits.tsx  CardArt.tsx  Catch.tsx  CircleCta.tsx  ClaimSection.tsx  Closing.tsx  Deep.tsx  Demo.tsx  Evidence.tsx  Faq.tsx  Faqs.tsx  FeatureAscii.tsx  Features.tsx  FlowingMenu.tsx  Footer.tsx  Get.tsx  Giant.tsx  GradientBlinds.tsx  GridFX.tsx  Hero.tsx  HeroConsole.tsx  HeroDemo.tsx  How.tsx  HowItWorks.tsx  ImageBand.tsx  Independence.tsx  LabClient.tsx  Layers.tsx  Marquee.tsx  Masthead.tsx  Method.tsx  Money.tsx  (+23 more)
control_plane/: README.md  __init__.py  db.py  migrate.py  requirements.txt  setup-venv.sh  signing_pubkey.json  verify_proof.py
demo-repo/: README.md  eval.py
docs/: CALMA-BUILD-KIT.md  DASHBOARD.md  INVESTOR-BRIEF.md  README.md  SIGNING-KEY-RUNBOOK.md  SLO.md  TRUST.md  assurance-roadmap.md  calma-build-runbook.md  calma-skill-README.md  calma-skill-blueprint.md  calma-teardown-tests.md  demo.tape  explanation.md  extending.md  frameworks.md  how-to.md  install.md  llms.txt  pr-bot.md  reference.md  rekor.md  tutorial-catch-your-first-wrong-number.md
edges/: pyproject.toml
edges/common/: __init__.py  engine.py  llm.py  record.py  schema.py  store.py
edges/contract/: __init__.py  __main__.py  cli.py  counterexample.py  draft.py  library.py  loop.py  repo_scan.py  schema.py
edges/contract/data/: .gitignore
edges/extract/: __init__.py  __main__.py  cli.py  eval.py  extract.py  ingest.py  learn.py  reconcile.py  route.py  to_contract.py
edges/repair/: __init__.py  __main__.py  checkpoints.py  cli.py  diagnose.py  memory.py  orchestrate.py  review.py  types.py
edges/synth/: __init__.py  cegis.py  constraints.py  demo_onboard.py  feedback.py  fleet.py  onboard.py  spec.py
edges/synth/fixtures/: metrics_manifest.json
edges/tests/: __init__.py  conftest.py  test_cegis.py  test_checkpoints.py  test_cli.py  test_constraints.py  test_draft.py  test_extract.py  test_feedback.py  test_firewall.py  test_fleet.py  test_ingest.py  test_learn.py  test_library.py  test_loop.py  test_memory.py  test_onboard.py  test_reconcile.py  test_repair.py  test_review.py  test_route.py  test_to_contract.py
edges/tests/eval/: labeled_set.jsonl
edges/tests/fixtures/artifacts/: _gen_fixtures.py  eval_a.ipynb  eval_b.ipynb  nb_three_metrics.ipynb  preds.csv
edges/tests/fixtures/repos/decoy_score/: README.md  gen_fixture.py
edges/tests/fixtures/repos/decoy_score_2/: README.md  gen_fixture.py
edges/tests/fixtures/repos/sklearn_messy/: README.md  main.py
edges/tests/fixtures/targets/btc_like/: gen_fixture.py
edges/tests/fixtures/targets/btc_like/runs/oos/: preds.csv
edges/tests/fixtures/targets/nb_run/: gen_fixture.py  report.ipynb
edges/tests/fixtures/targets/nb_run/runs/oos/: returns.csv
github_app/: DEPLOY.md  __init__.py  app-manifest.yml  auth.py  server.py
hooks/: hooks.json
legal/: 01-entity-checklist.md  02-mutual-nda.md  03-engagement-letter.md  04-liability-disclaimer.md  05-eo-insurance.md  README.md  RECOMMENDATION.md
lib/: session.ts
mcp/: README.md  conftest.py  pyproject.toml
mcp/calma_mcp/: __init__.py  __main__.py  server.py
mcp/tests/: test_firewall.py  test_server.py
pr/: __init__.py  bundle.py  comment_pr.py  diff_targets.py  github.py  init.py  pyproject.toml  render.py  run_pr.py
pr/tests/: test_comment_pr.py  test_diff_targets.py  test_firewall.py  test_init.py  test_render.py  test_workflows.py
registry/: HEAD.json  README.md
rehearsals/: run_rehearsal.py
scripts/: dev.sh  eval.sh  test_all.sh
spike/: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  corpus.py  e2b_template.py  fly.toml  graph.py  pipeline.py  planner.py  repos.yaml  requirements-dev.txt  requirements.txt  ruff.toml  run_spike.py  server.py  web.sh
web/: .env.example  eslint.config.mjs  middleware.ts  next.config.mjs  package-lock.json  package.json  tsconfig.json
(+650 files in other folders)
